fix: slider-area z-index

--- a/css/style.css
+++ b/css/style.css
@@ -4498,6 +4498,9 @@ body.admin-bar .header-menu-area.sticky_menu {
   }
 }
 
+.slider-area.style-2 {
+  z-index: 10;
+}
 .slider-area.style-2 .single-slider .single-slider-inner {
   position: relative;
   display: flex;
