--- a/sass/modules/slider/_slider-style-two.scss
+++ b/sass/modules/slider/_slider-style-two.scss
@@ -1,5 +1,6 @@
 .slider-area {
   &.style-2 {
+    z-index: 10;
     .single-slider {
       .single-slider-inner {
         position: relative;
